# cancer-research-model

./: .gitignore  LICENSE  README.md  TODO.md  USER_GUIDE.md  pyproject.toml  quick_start.sh  requirements.txt  run_ablation.sh  run_clinical_candidate_eval.sh  run_final_head_to_head.sh  run_fixmatch_rescue.sh  run_followup_overnight.sh  run_nofreeze_baseline_sweep.sh  run_supervised_sweep.sh  session-ses_2fc9.md
configs/: default.yaml  default_nofreeze.yaml  default_nofreeze_adamw.yaml  default_nofreeze_aug_safe.yaml  default_nofreeze_aug_safe_ls.yaml  default_nofreeze_b2.yaml  default_nofreeze_b3.yaml  default_nofreeze_ls.yaml  default_nofreeze_ls_adam.yaml  default_nofreeze_ls_adamw.yaml  default_nofreeze_res1024.yaml  default_nofreeze_res512.yaml  default_nofreeze_res768.yaml  default_nofreeze_sgd.yaml  fixmatch.yaml  fixmatch_525px.yaml  fixmatch_legacy_aug.yaml  fixmatch_static.yaml  fixmatch_tier_a.yaml  fixmatch_tier_b.yaml  mean_teacher.yaml  test.yaml
docs/: project-overview.md
notebooks/: 01_data_exploration.ipynb  02_training_curves.ipynb  03_embeddings.ipynb  04_model_interpretation.ipynb  05_research_retrospective.ipynb
reports/: candidate_baseline_template.md  current_progress_brief.md  final_results.md  portfolio_blurb.md  ssl_closure_summary.txt
results_followup/: followup_summary.txt  rescue_summary.json
results_supervised_candidates/: supervised_summary.txt
results_supervised_final_head_to_head/: supervised_summary.txt
results_supervised_ls_optimizer_recovery/: supervised_summary.txt
results_supervised_sweep/: supervised_summary.txt
(+345 files in other folders)
